Fix alignment

--- a/src/pages/rate-opening/rate-opening.module.scss
+++ b/src/pages/rate-opening/rate-opening.module.scss
@@ -119,6 +119,7 @@
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .icon {
